# blog_new

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
migrations/: 20250304185355_create_user.sql
src/: app.rs  error_template.rs  lib.rs  main.rs  state.rs
src/components/: articles.rs  education.rs  footer.rs  header.rs  mod.rs  profile.rs  projects.rs  skills.rs  work_experience.rs
src/functions/: auth.rs
src/layouts/: header_layout.rs  mod.rs
src/providers/: auth.rs
src/routes/: home.rs
src/routes/auth/: login.rs  logout.rs  signup.rs
style/: tailwind.css
